<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_rectangle_dark_gray_cr15"
        android:layout_width="@dimen/_490wdp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:background="@drawable/bg_rectangle_red_crt10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/bp_task_header"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_39wdp"
                android:textAllCaps="true"
                style="@style/MontserratBold16spOr12ssp"/>
            <ImageView
                android:id="@+id/bp_task_close"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_close_rounded"/>
        </RelativeLayout>
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/bp_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="true"
            style="@style/TextViewPrimary.MullerBold.11"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#ffffba08"
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/black_pass_task_info_title_1"
                    style="@style/TextViewPrimary.MullerBold.11"/>
                <TextView
                    android:id="@+id/bp_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    style="@style/MontserratRegular12spOr9ssp"/>
                <TextView
                    android:textColor="#ffffba08"
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/black_pass_task_info_title_2"
                    style="@style/TextViewPrimary.MullerBold.11"/>
                <RelativeLayout
                    android:background="@drawable/bg_rectangle_gray_cr15"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_25wdp"
                    android:layout_marginTop="@dimen/_4sdp">
                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true"
                        app:srcCompat="@drawable/ic_currency"/>
                    <TextView
                        android:textColor="#ff5ddd27"
                        android:id="@+id/bp_task_coins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_toEndOf="@+id/imageView11"
                        style="@style/MontserratBold12spOr9ssp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:background="@drawable/bg_rectangle_gray_cr15"
                    android:layout_width="@dimen/_190sdp"
                    android:layout_height="@dimen/_25wdp"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:textSize="@dimen/_10ssp"
                        android:textColor="@color/yellow"
                        android:id="@+id/imageView12"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_14sdp"
                        android:text="@string/black_pass_XP"
                        android:layout_centerHorizontal="false"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/montserrat_black"
                        android:layout_marginStart="10dp"
                        android:layout_alignParentStart="true"/>
                    <TextView
                        android:id="@+id/bp_task_exp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_toEndOf="@+id/imageView12"
                        style="@style/MontserratBold12spOr9ssp"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="6dp"
            android:weightSum="2">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bp_task_exch"
                android:background="@drawable/bg_button_red_cr5_t1_white"
                android:layout_width="0px"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/black_pass_task_info_button_change"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                style="@style/TextViewPrimary.MullerBold.10"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bp_task_track"
                android:background="@drawable/bg_button_blue_cr5_t1_white"
                android:layout_width="0px"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/common_track"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                style="@style/TextViewPrimary.MullerBold.10"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
