<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_3sdp"
    android:layout_marginBottom="@dimen/_3sdp">
    <View
        android:id="@+id/donate_item_present_bg"
        android:background="@drawable/bg_rectangle_yellow_cr15"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <TextView
        android:textSize="@dimen/_8ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_present_title"
        android:paddingTop="3dp"
        android:paddingBottom="2dp"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/donate_tile_present_title"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_present_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_present_bg"
        app:layout_constraintTop_toTopOf="@+id/donate_item_present_bg"/>
    <TextView
        android:textSize="@dimen/_7ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_present_sub_title"
        android:paddingTop="3dp"
        android:paddingBottom="2dp"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/donate_tile_present_title"
        android:fontFamily="@font/muller_regular"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_present_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_present_bg"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_present_title"/>
    <ImageView
        android:id="@+id/donate_item_present_icon"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ask_icon"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_present_status_title"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_present_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_present_bg"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_present_sub_title"/>
    <TextView
        android:textSize="@dimen/_7ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_present_status_title"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/donate_tile_present_status_title"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_present_status_value_of_time"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_present_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_present_bg"/>
    <TextView
        android:textSize="@dimen/_7ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_present_status_value_of_time"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_button"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_present_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_present_bg"/>
    <View
        android:id="@+id/donate_item_default_bg"
        android:background="@drawable/bg_donate_tile_blue"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>
    <TextView
        android:textSize="@dimen/_8ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_default_additional"
        android:background="@drawable/bg_rectangle_yellow_crt15"
        android:paddingTop="3dp"
        android:paddingBottom="2dp"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_bg"
        app:layout_constraintTop_toTopOf="@+id/donate_item_default_bg"/>
    <TextView
        android:textSize="@dimen/_8ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/donate_item_default_header"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_bg"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_default_additional"/>
    <TextView
        android:textSize="@dimen/_7ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/donate_item_default_sub_header"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_bg"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_default_header"/>
    <ImageView
        android:id="@+id/donate_item_default_icon"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="6dp"
        android:src="@drawable/ask_icon"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_default_price"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_bg"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_default_sub_header"/>
    <TextView
        android:textSize="@dimen/_7ssp"
        android:textColor="@color/gray_blue"
        android:gravity="start"
        android:id="@+id/donate_item_default_price_stroked"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_button"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_bg"/>
    <TextView
        android:textSize="@dimen/_7ssp"
        android:textColor="@color/white"
        android:gravity="end"
        android:id="@+id/donate_item_default_price"
        android:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_button"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_bg"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_bg"/>
    <TextView
        android:textSize="@dimen/_6ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/donate_item_default_badge_new"
        android:background="@drawable/bg_rectangle_red_cr2"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_badge_text"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_badge_text"
        app:layout_constraintTop_toTopOf="@+id/donate_item_default_bg"/>
    <TextView
        android:textSize="@dimen/_6ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/donate_item_default_badge_text"
        android:background="@drawable/bg_rectangle_red_crt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_tile_badge_text"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_default_sub_header"/>
    <TextView
        android:textSize="@dimen/_6ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_default_badge_time"
        android:background="@drawable/bg_rectangle_white_crb3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_badge_text"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_badge_text"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_default_badge_text"/>
    <TextView
        android:textSize="@dimen/_6ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_default_badge_percent"
        android:background="@drawable/bg_rectangle_yellow_cr2"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:fontFamily="@font/muller_bold"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_default_badge_text"
        app:layout_constraintStart_toStartOf="@+id/donate_item_default_badge_text"
        app:layout_constraintTop_toBottomOf="@+id/donate_item_default_badge_time"/>
    <TextView
        android:textSize="@dimen/_5ssp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/donate_item_limit_title"
        android:background="@drawable/bg_rectangle_red_crt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_tile_limit_title_text"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_limit_count"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textSize="@dimen/_5ssp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/donate_item_limit_count"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:fontFamily="@font/montserrat_bold"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        app:layout_constraintBottom_toTopOf="@+id/donate_item_default_price_stroked"
        app:layout_constraintEnd_toEndOf="@+id/donate_item_limit_title"
        app:layout_constraintStart_toStartOf="@+id/donate_item_limit_title"/>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="@dimen/_9ssp"
        android:textColor="@color/white"
        android:id="@+id/donate_item_button"
        android:background="@drawable/bg_button_red_cr5_t1_white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_26sdp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/muller_bold"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
